projects/vb6parse/snapshots/parsers/cst/library/string/formatcurrency/formatcurrency_basic.snap
---
source: projects/vb6parse/tests/library/string/formatcurrency.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: FormatCurrency
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: amount
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
