projects/vb6parse/snapshots/parsers/cst/library/string/formatcurrency/formatcurrency_error_handling.snap
---
source: projects/vb6parse/tests/library/string/formatcurrency.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: OnErrorStatement
      children:
        - kind: OnKeyword
          text: "On"
        - kind: Whitespace
          text: " "
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: " "
        - kind: GotoKeyword
          text: GoTo
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ErrorHandler
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: formatted
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: FormatCurrency
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: value
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: decimals
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: ExitStatement
      children:
        - kind: ExitKeyword
          text: Exit
        - kind: Whitespace
          text: " "
        - kind: FunctionKeyword
          text: Function
    - kind: Newline
      text: "\n"
    - kind: LabelStatement
      children:
        - kind: Identifier
          text: ErrorHandler
        - kind: ColonOperator
          text: ":"
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "    "
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: formatted
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"N/A\""
        - kind: Newline
          text: "\n"
